--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CARVA — Drop Essencial (3 peças)</title>
+  <title>CARVA STUDIOS</title>
   <meta name="description" content="Coleção cápsula com 3 peças. Compra segura via link de pagamento. Estoque limitado." />
   <style>
     :root {
@@ -62,9 +62,9 @@
     <div class="brand">
       <svg width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 12c0-4.418 3.582-8 8-8 2.21 0 4.21.896 5.657 2.343L12 12l-5.657 5.657A7.964 7.964 0 0 1 4 12Z" fill="currentColor"/></svg>
       <span>CARVA</span>
-      <span class="badge">Drop Essencial</span>
+      <span class="badge">Drop LIDÍMO</span>
     </div>
-    <a class="cta" href="#produtos">Comprar agora</a>
+    <a class="cta" href="#produtos">?????</a>
   </header>
 
   <main class="container">
@@ -73,9 +73,9 @@
         <h1>Três peças. Zero ruído. <br/>Compra direta e segura.</h1>
         <p>Capsule drop da CARVA feito sob demanda. Pagamento via link seguro (Pix, cartão). Estoque limitado — quando acabar, acabou.</p>
         <div class="row">
-          <span class="pill">Envio nacional</span>
-          <span class="pill">Troca fácil</span>
-          <span class="pill">Edição limitada</span>
+          <span class="pill">PEÇAS LIMITADAS</span>
+          <span class="pill">SLOWFASHION</span>
+          <span class="pill">FRETE GRATIS</span>
         </div>
       </div>
       <div class="hero-card">
