--- a/index.html
+++ b/index.html
@@ -70,8 +70,12 @@
   <main class="container">
     <section class="hero">
       <div>
-        <h1>Três peças. Zero ruído. <br/>Compra direta e segura.</h1>
-        <p>Capsule drop da CARVA feito sob demanda. Pagamento via link seguro (Pix, cartão). Estoque limitado — quando acabar, acabou.</p>
+        <h1>Carva Studios <br/>Sobriedade que transforma presença em impacto</h1>
+        <p>lídimo (adj.)
+
+Autêntico; verdadeiro; legítimo; genuíno.
+
+Que exprime a essência própria de algo; puro, sem falsificação.</p>
         <div class="row">
           <span class="pill">PEÇAS LIMITADAS</span>
           <span class="pill">SLOWFASHION</span>
@@ -97,7 +101,7 @@
             <img src="https://i.imgur.com/GpIp2cv.png" alt="Moletom CARVA edição limitada"/>
           </div>
           <div class="card-body">
-            <div class="title">Moletom CARVA — Preto/Verde</div>
+            <div class="title">Moletom CARVA Essential Tee — Preto</div>
             <div class="muted">Fleece premium • Unissex • P–GG</div>
             <div class="price">R$ 239,90</div>
             <div class="sizes">
@@ -118,7 +122,7 @@
             <img src="https://i.imgur.com/8MTNkOR.png" alt="Camiseta CARVA básica"/>
           </div>
           <div class="card-body">
-            <div class="title">Camiseta CARVA — Essential Tee</div>
+            <div class="title">Moletom CARVA Essential Tee — Branco</div>
             <div class="muted">Algodão 30/1 • Unissex • P–GG</div>
             <div class="price">R$ 119,90</div>
             <div class="sizes">
@@ -139,7 +143,7 @@
             <img src="https://i.imgur.com/yX5yEfn.png" alt="Boné CARVA"/>
           </div>
           <div class="card-body">
-            <div class="title">Boné CARVA — Minimal Cap</div>
+            <div class="title">Polo CARVA Essential Tee — Nude</div>
             <div class="muted">Ajustável • Aba curvada</div>
             <div class="price">R$ 89,90</div>
             <div class="sizes">
