--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
   <main class="container">
     <section class="hero">
       <div>
-        <h1>Carva Studios <br/>Sobriedade que transforma presença em impacto</h1>
-        <p>lídimo (adj.)
+        <h1>Carva Studios- <br/>Sobriedade que transforma presença em impacto</h1>
+        <p>Lídimo (adj.) <br/
 
-Autêntico; verdadeiro; legítimo; genuíno.
+Autêntico; verdadeiro; legítimo; genuíno. <br/
 
 Que exprime a essência própria de algo; puro, sem falsificação.</p>
         <div class="row">
@@ -102,7 +102,7 @@ Que exprime a essência própria de algo; puro, sem falsificação.</p>
           </div>
           <div class="card-body">
             <div class="title">Moletom CARVA Essential Tee — Preto</div>
-            <div class="muted">Fleece premium • Unissex • P–GG</div>
+            <div class="muted">FRETE GRATIS</div>
             <div class="price">R$ 239,90</div>
             <div class="sizes">
               <button class="size-btn" data-link="https://example.com/moletom-p">P</button>
@@ -123,7 +123,7 @@ Que exprime a essência própria de algo; puro, sem falsificação.</p>
           </div>
           <div class="card-body">
             <div class="title">Moletom CARVA Essential Tee — Branco</div>
-            <div class="muted">Algodão 30/1 • Unissex • P–GG</div>
+            <div class="muted">FRETE GRATIS</div>
             <div class="price">R$ 119,90</div>
             <div class="sizes">
               <button class="size-btn" data-link="https://example.com/camiseta-p">P</button>
@@ -144,7 +144,7 @@ Que exprime a essência própria de algo; puro, sem falsificação.</p>
           </div>
           <div class="card-body">
             <div class="title">Polo CARVA Essential Tee — Nude</div>
-            <div class="muted">Ajustável • Aba curvada</div>
+            <div class="muted">FRETE GRATIS</div>
             <div class="price">R$ 89,90</div>
             <div class="sizes">
               <button class="size-btn" data-link="https://example.com/bone-p">P</button>
