--- a/index.html
+++ b/index.html
@@ -71,11 +71,9 @@
     <section class="hero">
       <div>
         <h1>Carva Studios- <br/>Sobriedade que transforma presença em impacto</h1>
-        <p>Lídimo (adj.) <br/
-
-Autêntico; verdadeiro; legítimo; genuíno. <br/
-
-Que exprime a essência própria de algo; puro, sem falsificação.</p>
+        <p>Lídimo (adj.)
+          Autêntico; verdadeiro; legítimo; genuíno. 
+          Que exprime a essência própria de algo; puro, sem falsificação.</p>
         <div class="row">
           <span class="pill">PEÇAS LIMITADAS</span>
           <span class="pill">SLOWFASHION</span>
