--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <section class="hero">
       <div>
         <h1>Carva Studios- <br/>Sobriedade que transforma presença em impacto</h1>
-        <p>Lídimo (adj.)
-          Autêntico; verdadeiro; legítimo; genuíno. 
+        <p>Lídimo (adj.)<br/>
+          Autêntico; verdadeiro; legítimo; genuíno. <br/>
           Que exprime a essência própria de algo; puro, sem falsificação.</p>
         <div class="row">
           <span class="pill">PEÇAS LIMITADAS</span>
