--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
   <meta name="description" content="Coleção cápsula com 3 peças. Compra segura via link de pagamento. Estoque limitado." />
   <style>
     :root {
-      --bg: #0b0b0b; --fg: #f5f5f5; --muted:#b3b3b3; --accent:#8a2be2; --card:#111111; --stroke:#1f1f1f;
+      --bg: #ffffff; --fg: #000000; --muted:#363636; --accent:#b2b2b2; --card:#bdbdbd; --stroke:#ffffff;
     }
     * { box-sizing: border-box; }
     body { margin:0; font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji"; background:var(--bg); color:var(--fg); }
     a { color: inherit; text-decoration: none; }
+    #LOGO { 
+  width: 100px;   /* largura da logo (ajuste como quiser) */
+  height: auto;  /* mantém a proporção */
+  display: block;
+}
+
     .container { max-width: 1280px; margin: 0 auto; padding: 24px; }
-    header { display:flex; align-items:center; justify-content:space-between; gap:16px; padding: 12px 0 24px; border-bottom: 1px solid var(--stroke); position: sticky; top:0; background:linear-gradient(180deg, rgba(11,11,11,.9), rgba(11,11,11,.6)); backdrop-filter: blur(6px); z-index: 20; flex-wrap: wrap; }
+    header { display:flex; align-items:center; justify-content:center; gap:16px; padding: 12px 0 24px; border-bottom: 1px solid var(--stroke); position: sticky; top:0; background:white; z-index: 20; flex-wrap: wrap; }
     .brand { display:flex; align-items:center; gap:12px; font-weight:700; letter-spacing: .08em; text-transform: uppercase; }
     .badge { padding: 4px 10px; border:1px solid var(--stroke); border-radius: 999px; font-size: 12px; color: var(--muted); }
     .cta { display:inline-flex; align-items:center; gap:10px; padding:12px 18px; background: var(--accent); color:#fff; border-radius: 999px; font-weight: 700; border: 0; cursor: pointer; transition: transform .1s ease; }
@@ -23,7 +29,7 @@
     .hero p { margin: 0 0 18px; color: var(--muted); }
     .hero-card { background: radial-gradient(1000px 600px at 20% -10%, rgba(138,43,226,.08), transparent), var(--card); border: 1px solid var(--stroke); border-radius: 24px; padding: 20px; }
     .grid { display:grid; grid-template-columns: repeat(3, 1fr); gap: 18px; margin-top: 28px; }
-    .card { background: var(--card); border: 1px solid var(--stroke); border-radius: 20px; overflow:hidden; display:flex; flex-direction:column; }
+    .card { background: var(--card); border: 1px solid var(--stroke); border-radius: 10px; overflow:hidden; display:flex; flex-direction:column; }
     .thumb { aspect-ratio: 4/5; width: 100%; background: #0f0f0f; display:grid; place-items:center; }
     .thumb img { width: 100%; height: 100%; object-fit: cover; display:block; }
     .card-body { padding: 16px; display:flex; flex-direction:column; gap: 8px; }
@@ -33,10 +39,10 @@
     .sizes { display:flex; gap:8px; margin-top:8px; }
     .size-btn { flex:1; text-align:center; padding:8px 0; border:1px solid var(--stroke); border-radius:8px; cursor:pointer; background:transparent; color:var(--fg); font-weight:600; transition:all .2s ease; }
     .size-btn:hover { border-color:#2a2a2a; }
-    .size-btn.active { background:var(--accent); color:#fff; border-color:transparent; }
+    .size-btn.active { background:white; color:black; border-color:black; }
     .buy { margin-top:12px; }
-    .buy a { display:block; text-align:center; padding:12px 14px; border-radius:14px; background: #333; color:#777; font-weight:800; pointer-events:none; transition:all .2s ease; }
-    .buy a.enabled { background:var(--accent); color:#fff; pointer-events:auto; }
+    .buy a { display:block; text-align:center; padding:12px 14px; border-radius:14px; background: #000000; color:#777; font-weight:800; pointer-events:none; transition:all .2s ease; }
+    .buy a.enabled { background:white; color:black; pointer-events:auto; }
     .pill { font-size: 12px; color:#fff; background: var(--accent); padding: 4px 10px; border-radius: 999px; font-weight:800; }
     .row { display:flex; gap: 10px; align-items:center; flex-wrap: wrap; }
     .footer { margin-top: 42px; padding: 24px 0; border-top: 1px solid var(--stroke); color: var(--muted); font-size: 14px; display:flex; justify-content:space-between; gap: 12px; flex-wrap: wrap; }
@@ -60,17 +66,15 @@
 <body>
   <header class="container">
     <div class="brand">
-      <svg width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 12c0-4.418 3.582-8 8-8 2.21 0 4.21.896 5.657 2.343L12 12l-5.657 5.657A7.964 7.964 0 0 1 4 12Z" fill="currentColor"/></svg>
-      <span>CARVA</span>
-      <span class="badge">Drop LIDÍMO</span>
+      <img src="semfun.png" alt="CARVA" id="LOGO">
     </div>
-    <a class="cta" href="#produtos">?????</a>
+    
   </header>
 
   <main class="container">
     <section class="hero">
       <div>
-        <h1>Carva Studios- <br/>Sobriedade que transforma presença em impacto</h1>
+        <h2>Carva Studios- <br/>Sobriedade que transforma presença em impacto</h2>
         <p>Lídimo (adj.)<br/>
           Autêntico; verdadeiro; legítimo; genuíno. <br/>
           Que exprime a essência própria de algo; puro, sem falsificação.</p>
@@ -86,7 +90,7 @@
           Selecione sua peça limitada.<br/>
           Finalize em um link de pagamento rápido e transparente.<br/>
           Receba a confirmação direta no WhatsApp.<br/>
-          Da nossa cápsula para a sua rotina.
+          <strong>Da nossa cápsula para a sua rotina.</strong>
         </div>
       </div>
     </section>
