--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
   <header class="container">
     <div class="brand">
-      <img src="semfun.png" alt="CARVA" id="LOGO">
+      <img src="https://i.imgur.com/GKwQD0R.png" alt="CARVA" id="LOGO">
     </div>
     
   </header>
