--- a/index.html
+++ b/index.html
@@ -12,22 +12,32 @@
     * { box-sizing: border-box; }
     body { margin:0; font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji"; background:var(--bg); color:var(--fg); }
     a { color: inherit; text-decoration: none; }
+
+    /* Logo pequena e central no header */
     #LOGO { 
-  width: 100px;   /* largura da logo (ajuste como quiser) */
-  height: auto;  /* mantém a proporção */
-  display: block;
-}
+      width: 100px;
+      height: auto;
+      display: block;
+    }
 
     .container { max-width: 1280px; margin: 0 auto; padding: 24px; }
-    header { display:flex; align-items:center; justify-content:center; gap:16px; padding: 12px 0 24px; border-bottom: 1px solid var(--stroke); position: sticky; top:0; background:white; z-index: 20; flex-wrap: wrap; }
+
+    header { 
+      display:flex; align-items:center; justify-content:center; gap:16px;
+      padding: 12px 0 24px; border-bottom: 1px solid var(--stroke);
+      position: sticky; top:0; background:white; z-index: 20; flex-wrap: wrap;
+    }
     .brand { display:flex; align-items:center; gap:12px; font-weight:700; letter-spacing: .08em; text-transform: uppercase; }
+
     .badge { padding: 4px 10px; border:1px solid var(--stroke); border-radius: 999px; font-size: 12px; color: var(--muted); }
     .cta { display:inline-flex; align-items:center; gap:10px; padding:12px 18px; background: var(--accent); color:#fff; border-radius: 999px; font-weight: 700; border: 0; cursor: pointer; transition: transform .1s ease; }
     .cta:active { transform: translateY(1px); }
+
     .hero { display:grid; grid-template-columns: 1.2fr .8fr; gap: 24px; align-items:center; padding: 28px 0; }
-    .hero h1 { font-size: clamp(28px, 5vw, 56px); line-height: 1.02; margin: 0 0 12px; }
+    .hero h1, .hero h2 { font-size: clamp(28px, 5vw, 56px); line-height: 1.02; margin: 0 0 12px; }
     .hero p { margin: 0 0 18px; color: var(--muted); }
     .hero-card { background: radial-gradient(1000px 600px at 20% -10%, rgba(138,43,226,.08), transparent), var(--card); border: 1px solid var(--stroke); border-radius: 24px; padding: 20px; }
+
     .grid { display:grid; grid-template-columns: repeat(3, 1fr); gap: 18px; margin-top: 28px; }
     .card { background: var(--card); border: 1px solid var(--stroke); border-radius: 10px; overflow:hidden; display:flex; flex-direction:column; }
     .thumb { aspect-ratio: 4/5; width: 100%; background: #0f0f0f; display:grid; place-items:center; }
@@ -38,16 +48,28 @@
     .muted { color: var(--muted); font-size: 14px; }
     .sizes { display:flex; gap:8px; margin-top:8px; }
     .size-btn { flex:1; text-align:center; padding:8px 0; border:1px solid var(--stroke); border-radius:8px; cursor:pointer; background:transparent; color:var(--fg); font-weight:600; transition:all .2s ease; }
-    .size-btn:hover { border-color:#2a2a2a; }
-    .size-btn.active { background:white; color:black; border-color:black; }
+    .size-btn:hover, .size-btn:focus-visible { border-color:#2a2a2a; }
     .buy { margin-top:12px; }
-    .buy a { display:block; text-align:center; padding:12px 14px; border-radius:14px; background: #000000; color:#777; font-weight:800; pointer-events:none; transition:all .2s ease; }
-    .buy a.enabled { background:white; color:black; pointer-events:auto; }
+    /* Sem JS: botão de comprar já vem habilitado */
+    .buy a { display:block; text-align:center; padding:12px 14px; border-radius:14px; background:white; color:black; font-weight:800; }
+
     .pill { font-size: 12px; color:#fff; background: var(--accent); padding: 4px 10px; border-radius: 999px; font-weight:800; }
     .row { display:flex; gap: 10px; align-items:center; flex-wrap: wrap; }
+
     .footer { margin-top: 42px; padding: 24px 0; border-top: 1px solid var(--stroke); color: var(--muted); font-size: 14px; display:flex; justify-content:space-between; gap: 12px; flex-wrap: wrap; }
     .note { border:1px dashed var(--stroke); border-radius: 14px; padding: 12px 14px; color: var(--muted); font-size: 14px; }
     .policy a { text-decoration: underline; text-decoration-color: rgba(138,43,226,.7); }
+
+    /* ===== Banner full-bleed logo abaixo da .row ===== */
+    .banner-full { margin: 0; padding: 0; }
+    .banner-full img {
+      width: 100%;
+      height: 100vh;      /* ocupa a tela inteira */
+      object-fit: cover;  /* corta com elegância */
+      display: block;     /* remove espaços fantasmas */
+    }
+
+    /* ===== Responsividade ===== */
     @media (max-width: 920px) {
       .hero { grid-template-columns: 1fr; }
       .grid { grid-template-columns: 1fr; }
@@ -56,25 +78,26 @@
       .grid { grid-template-columns: repeat(3, 1fr); }
     }
     @media (max-width: 640px) {
-  header { gap:12px; padding:10px 0 16px; justify-content:center; }  /* garante centro */
-  header .brand {
-    flex:1 1 100%;
-    display:flex;
-    justify-content:center;   /* 💡 mantém a logo no meio */
-    align-items:center;
-  }
-  header .cta { width:100%; text-align:center; padding:14px 16px; border-radius:14px; }
-  .badge { font-size:11px; padding:3px 8px; }
-}
+      header { gap:12px; padding:10px 0 16px; justify-content:center; }
+      header .brand {
+        flex:1 1 100%;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+      }
+      header .cta { width:100%; text-align:center; padding:14px 16px; border-radius:14px; }
+      .badge { font-size:11px; padding:3px 8px; }
 
+      /* 🔒 Esconde o card da hero no mobile */
+      .hero-card { display: none; }
+    }
   </style>
 </head>
 <body>
   <header class="container">
     <div class="brand">
-      <img src="https://i.imgur.com/GKwQD0R.png" alt="CARVA" id="LOGO">
+      <img src="semfun.png" alt="CARVA" id="LOGO">
     </div>
-    
   </header>
 
   <main class="container">
@@ -90,6 +113,8 @@
           <span class="pill">FRETE GRATIS</span>
         </div>
       </div>
+
+      <!-- some no desktop/tablet, escondido no mobile -->
       <div class="hero-card">
         <div class="note">
           <strong>Como funciona:</strong><br/>
@@ -100,7 +125,14 @@
         </div>
       </div>
     </section>
+  </main>
 
+  <!-- ✅ Banner full-bleed imediatamente abaixo da .row -->
+  <div class="banner-full">
+    <img src="IMG_4320.jpg" alt="Banner CARVA">
+  </div>
+
+  <main class="container">
     <section id="produtos">
       <div class="grid">
         <!-- PRODUTO 1 -->
@@ -113,13 +145,13 @@
             <div class="muted">FRETE GRATIS</div>
             <div class="price">R$ 239,90</div>
             <div class="sizes">
-              <button class="size-btn" data-link="https://example.com/moletom-p">P</button>
-              <button class="size-btn" data-link="https://example.com/moletom-m">M</button>
-              <button class="size-btn" data-link="https://example.com/moletom-g">G</button>
-              <button class="size-btn" data-link="https://example.com/moletom-gg">GG</button>
+              <button class="size-btn">P</button>
+              <button class="size-btn">M</button>
+              <button class="size-btn">G</button>
+              <button class="size-btn">GG</button>
             </div>
             <div class="buy">
-              <a href="#" target="_blank" rel="noopener">Comprar</a>
+              <a href="#">Comprar</a>
             </div>
           </div>
         </article>
@@ -134,13 +166,13 @@
             <div class="muted">FRETE GRATIS</div>
             <div class="price">R$ 119,90</div>
             <div class="sizes">
-              <button class="size-btn" data-link="https://example.com/camiseta-p">P</button>
-              <button class="size-btn" data-link="https://example.com/camiseta-m">M</button>
-              <button class="size-btn" data-link="https://example.com/camiseta-g">G</button>
-              <button class="size-btn" data-link="https://example.com/camiseta-gg">GG</button>
+              <button class="size-btn">P</button>
+              <button class="size-btn">M</button>
+              <button class="size-btn">G</button>
+              <button class="size-btn">GG</button>
             </div>
             <div class="buy">
-              <a href="#" target="_blank" rel="noopener">Comprar</a>
+              <a href="#">Comprar</a>
             </div>
           </div>
         </article>
@@ -155,13 +187,13 @@
             <div class="muted">FRETE GRATIS</div>
             <div class="price">R$ 89,90</div>
             <div class="sizes">
-              <button class="size-btn" data-link="https://example.com/bone-p">P</button>
-              <button class="size-btn" data-link="https://example.com/bone-m">M</button>
-              <button class="size-btn" data-link="https://example.com/bone-g">G</button>
-              <button class="size-btn" data-link="https://example.com/bone-gg">GG</button>
+              <button class="size-btn">P</button>
+              <button class="size-btn">M</button>
+              <button class="size-btn">G</button>
+              <button class="size-btn">GG</button>
             </div>
             <div class="buy">
-              <a href="#" target="_blank" rel="noopener">Comprar</a>
+              <a href="#">Comprar</a>
             </div>
           </div>
         </article>
@@ -176,25 +208,8 @@
 
     <div class="footer">
       <div>© <span id="year"></span> CARVA. Todos os direitos reservados.</div>
-      <div class="policy"><a href="#" onclick="alert(\"Compra gerida por link seguro do provedor de pagamentos (Pix e cartão). Dados pessoais usados apenas para entrega e suporte.\"); return false;">Políticas</a></div>
+      <div class="policy"><a href="#" onclick="alert('Compra gerida por link seguro do provedor de pagamentos (Pix e cartão). Dados pessoais usados apenas para entrega e suporte.'); return false;">Políticas</a></div>
     </div>
   </main>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    document.querySelectorAll('.card').forEach(function(card){
-      const buyAnchor = card.querySelector('.buy a');
-      const sizeButtons = card.querySelectorAll('.size-btn');
-      sizeButtons.forEach(function(btn){
-        btn.addEventListener('click', function(){
-          sizeButtons.forEach(b => b.classList.remove('active'));
-          btn.classList.add('active');
-          buyAnchor.setAttribute('href', btn.dataset.link);
-          buyAnchor.classList.add('enabled');
-        });
-      });
-    });
-  </script>
 </body>
 </html>
