--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     .hero { display:grid; grid-template-columns: 1.2fr .8fr; gap: 24px; align-items:center; padding: 28px 0; }
     .hero h1, .hero h2 { font-size: clamp(28px, 5vw, 56px); line-height: 1.02; margin: 0 0 12px; }
     .hero p { margin: 0 0 18px; color: var(--muted); }
-    .hero-card { background: radial-gradient(1000px 600px at 20% -10%, rgba(138,43,226,.08), transparent), var(--card); border: 1px solid var(--stroke); border-radius: 24px; padding: 20px; }
+    .hero-card { background: radial-gradient(1000px 600px at 20% -10%, rgba(138,43,226,.08), transparent), var(--card); border: 1px solid var(--stroke); border-radius: 14px; padding: 20px; }
 
     .grid { display:grid; grid-template-columns: repeat(3, 1fr); gap: 18px; margin-top: 28px; }
     .card { background: var(--card); border: 1px solid var(--stroke); border-radius: 10px; overflow:hidden; display:flex; flex-direction:column; }
@@ -96,7 +96,7 @@
 <body>
   <header class="container">
     <div class="brand">
-      <img src="semfun.png" alt="CARVA" id="LOGO">
+      <img src="https://i.imgur.com/bYTklrw.jpeg" alt="CARVA" id="LOGO">
     </div>
   </header>
 
