--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <body>
   <header class="container">
     <div class="brand">
-      <img src="https://i.imgur.com/bYTklrw.jpeg" alt="CARVA" id="LOGO">
+      <img src="semfun.png" alt="CARVA" id="LOGO">
     </div>
   </header>
 
@@ -129,7 +129,7 @@
 
   <!-- ✅ Banner full-bleed imediatamente abaixo da .row -->
   <div class="banner-full">
-    <img src="IMG_4320.jpg" alt="Banner CARVA">
+    <img src="https://i.imgur.com/bYTklrw.jpeg" alt="Banner CARVA">
   </div>
 
   <main class="container">
