--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
   <!-- ✅ Banner full-bleed imediatamente abaixo da .row -->
   <div class="banner-full">
-    <img src="https://i.imgur.com/2Pg950G.png" alt="Banner CARVA">
+    <img src="https://i.imgur.com/917J1U0.png" alt="Banner CARVA">
   </div>
 
   <main class="container">
