--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
     .size-btn { flex:1; text-align:center; padding:8px 0; border:1px solid var(--stroke); border-radius:8px; cursor:pointer; background:transparent; color:var(--fg); font-weight:600; transition:all .2s ease; }
     .size-btn:hover, .size-btn:focus-visible { border-color:#2a2a2a; }
     .buy { margin-top:12px; }
-    /* Sem JS: botão de comprar já vem habilitado */
     .buy a { display:block; text-align:center; padding:12px 14px; border-radius:14px; background:white; color:black; font-weight:800; }
 
     .pill { font-size: 12px; color:#fff; background: var(--accent); padding: 4px 10px; border-radius: 999px; font-weight:800; }
@@ -64,9 +63,10 @@
     .banner-full { margin: 0; padding: 0; }
     .banner-full img {
       width: 100%;
-      height: 100vh;      /* ocupa a tela inteira */
-      object-fit: cover;  /* corta com elegância */
-      display: block;     /* remove espaços fantasmas */
+      height: 100vh;         /* desktop: ocupa a tela inteira */
+      object-fit: cover;     /* desktop: corta com elegância */
+      object-position: center;
+      display: block;        /* remove espaços fantasmas */
     }
 
     /* ===== Responsividade ===== */
@@ -90,6 +90,12 @@
 
       /* 🔒 Esconde o card da hero no mobile */
       .hero-card { display: none; }
+
+      /* 📱 Banner no mobile: NÃO corta a imagem */
+      .banner-full img {
+        height: auto;        /* deixa a altura proporcional */
+        object-fit: contain; /* preserva 100% do conteúdo da imagem */
+      }
     }
   </style>
 </head>
@@ -129,6 +135,12 @@
 
   <!-- ✅ Banner full-bleed imediatamente abaixo da .row -->
   <div class="banner-full">
+    <!-- Se tiver uma versão otimizada para mobile, use <picture>:
+    <picture>
+      <source media="(max-width: 640px)" srcset="banner-mobile.jpg">
+      <img src="banner-desktop.jpg" alt="Banner CARVA">
+    </picture>
+    -->
     <img src="https://i.imgur.com/2Pg950G.png" alt="Banner CARVA">
   </div>
 
