--- a/index.html
+++ b/index.html
@@ -3,225 +3,177 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CARVA STUDIOS</title>
-  <meta name="description" content="Coleção cápsula com 3 peças. Compra segura via link de pagamento. Estoque limitado." />
+  <title>CARVA — 3D Logo (.gltf com assets externos)</title>
   <style>
-    :root {
-      --bg: #ffffff; --fg: #000000; --muted:#363636; --accent:#b2b2b2; --card:#bdbdbd; --stroke:#ffffff;
-    }
-    * { box-sizing: border-box; }
-    body { margin:0; font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji"; background:var(--bg); color:var(--fg); }
-    a { color: inherit; text-decoration: none; }
+    :root{ --bg:#0b0b0b; --fg:#eaeaea; }
+    html,body{height:100%}
+    body{ margin:0; background:var(--bg); color:var(--fg); font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
 
-    /* Logo pequena e central no header */
-    #LOGO { 
-      width: 100px;
-      height: auto;
-      display: block;
-    }
+    .logo3d-wrap{ position:relative; width:100%; height:60vh; min-height:360px; max-height:78vh; display:grid; place-items:center; overflow:hidden; }
+    canvas{ display:block; width:100%; height:100%; }
 
-    .container { max-width: 1280px; margin: 0 auto; padding: 24px; }
-
-    header { 
-      display:flex; align-items:center; justify-content:center; gap:16px;
-      padding: 12px 0 24px; border-bottom: 1px solid var(--stroke);
-      position: sticky; top:0; background:white; z-index: 20; flex-wrap: wrap;
-    }
-    .brand { display:flex; align-items:center; gap:12px; font-weight:700; letter-spacing: .08em; text-transform: uppercase; }
-
-    .badge { padding: 4px 10px; border:1px solid var(--stroke); border-radius: 999px; font-size: 12px; color: var(--muted); }
-    .cta { display:inline-flex; align-items:center; gap:10px; padding:12px 18px; background: var(--accent); color:#fff; border-radius: 999px; font-weight: 700; border: 0; cursor: pointer; transition: transform .1s ease; }
-    .cta:active { transform: translateY(1px); }
-
-    .hero { display:grid; grid-template-columns: 1.2fr .8fr; gap: 24px; align-items:center; padding: 28px 0; }
-    .hero h1, .hero h2 { font-size: clamp(28px, 5vw, 56px); line-height: 1.02; margin: 0 0 12px; }
-    .hero p { margin: 0 0 18px; color: var(--muted); }
-    .hero-card { background: radial-gradient(1000px 600px at 20% -10%, rgba(138,43,226,.08), transparent), var(--card); border: 1px solid var(--stroke); border-radius: 14px; padding: 20px; }
-
-    .grid { display:grid; grid-template-columns: repeat(3, 1fr); gap: 18px; margin-top: 28px; }
-    .card { background: var(--card); border: 1px solid var(--stroke); border-radius: 10px; overflow:hidden; display:flex; flex-direction:column; }
-    .thumb { aspect-ratio: 4/5; width: 100%; background: #0f0f0f; display:grid; place-items:center; }
-    .thumb img { width: 100%; height: 100%; object-fit: cover; display:block; }
-    .card-body { padding: 16px; display:flex; flex-direction:column; gap: 8px; }
-    .title { font-size: 16px; font-weight:700; letter-spacing:.02em; }
-    .price { font-size: 18px; font-weight:800; }
-    .muted { color: var(--muted); font-size: 14px; }
-    .sizes { display:flex; gap:8px; margin-top:8px; }
-    .size-btn { flex:1; text-align:center; padding:8px 0; border:1px solid var(--stroke); border-radius:8px; cursor:pointer; background:transparent; color:var(--fg); font-weight:600; transition:all .2s ease; }
-    .size-btn:hover, .size-btn:focus-visible { border-color:#2a2a2a; }
-    .buy { margin-top:12px; }
-    .buy a { display:block; text-align:center; padding:12px 14px; border-radius:14px; background:white; color:black; font-weight:800; }
-
-    .pill { font-size: 12px; color:#fff; background: var(--accent); padding: 4px 10px; border-radius: 999px; font-weight:800; }
-    .row { display:flex; gap: 10px; align-items:center; flex-wrap: wrap; }
-
-    .footer { margin-top: 42px; padding: 24px 0; border-top: 1px solid var(--stroke); color: var(--muted); font-size: 14px; display:flex; justify-content:space-between; gap: 12px; flex-wrap: wrap; }
-    .note { border:1px dashed var(--stroke); border-radius: 14px; padding: 12px 14px; color: var(--muted); font-size: 14px; }
-    .policy a { text-decoration: underline; text-decoration-color: rgba(138,43,226,.7); }
-
-    /* ===== Banner full-bleed logo abaixo da .row ===== */
-    .banner-full { margin: 0; padding: 0; }
-    .banner-full img {
-      width: 100%;
-      height: 100vh;         /* desktop: ocupa a tela inteira */
-      object-fit: cover;     /* desktop: corta com elegância */
-      object-position: center;
-      display: block;        /* remove espaços fantasmas */
-    }
-
-    /* ===== Responsividade ===== */
-    @media (max-width: 920px) {
-      .hero { grid-template-columns: 1fr; }
-      .grid { grid-template-columns: 1fr; }
-    }
-    @media (min-width: 921px) {
-      .grid { grid-template-columns: repeat(3, 1fr); }
-    }
-    @media (max-width: 640px) {
-      header { gap:12px; padding:10px 0 16px; justify-content:center; }
-      header .brand {
-        flex:1 1 100%;
-        display:flex;
-        justify-content:center;
-        align-items:center;
-      }
-      header .cta { width:100%; text-align:center; padding:14px 16px; border-radius:14px; }
-      .badge { font-size:11px; padding:3px 8px; }
-
-      /* 🔒 Esconde o card da hero no mobile */
-      .hero-card { display: none; }
-
-      /* 📱 Banner no mobile: NÃO corta a imagem */
-      .banner-full img {
-        height: auto;        /* deixa a altura proporcional */
-        object-fit: contain; /* preserva 100% do conteúdo da imagem */
-      }
-    }
+    .hint{ position:absolute; bottom:10px; left:50%; transform:translateX(-50%); font-size:12px; opacity:.75;}
+    .perm{ position:absolute; bottom:46px; left:50%; transform:translateX(-50%); padding:.6em 1em; border-radius:12px; background:#1a1a1a; color:#fff; border:1px solid #2a2a2a; font-weight:600; cursor:pointer; display:none; }
+    .msg{ position:absolute; top:10px; left:50%; transform:translateX(-50%); font-size:12px; background:#141414; border:1px solid #2a2a2a; padding:.5em .8em; border-radius:10px; opacity:.9; max-width:92%; text-align:center }
+    @media (max-width:640px){ .logo3d-wrap{ height:56vh; min-height:300px } }
   </style>
+
+  <!-- Import Map: resolve "three" e addons no navegador -->
+  <script type="importmap">
+    {"imports":{
+      "three":"https://unpkg.com/three@0.160.0/build/three.module.js",
+      "three/addons/":"https://unpkg.com/three@0.160.0/examples/jsm/"
+    }}
+  </script>
 </head>
 <body>
-  <header class="container">
-    <div class="brand">
-      <img src="semfun.png" alt="CARVA" id="LOGO">
-    </div>
-  </header>
-
-  <main class="container">
-    <section class="hero">
-      <div>
-        <h2>Carva Studios- <br/>Sobriedade que transforma presença em impacto</h2>
-        <p>Lídimo (adj.)<br/>
-          Autêntico; verdadeiro; legítimo; genuíno. <br/>
-          Que exprime a essência própria de algo; puro, sem falsificação.</p>
-        <div class="row">
-          <span class="pill">PEÇAS LIMITADAS</span>
-          <span class="pill">SLOWFASHION</span>
-          <span class="pill">FRETE GRATIS</span>
-        </div>
-      </div>
-
-      <!-- some no desktop/tablet, escondido no mobile -->
-      <div class="hero-card">
-        <div class="note">
-          <strong>Como funciona:</strong><br/>
-          Selecione sua peça limitada.<br/>
-          Finalize em um link de pagamento rápido e transparente.<br/>
-          Receba a confirmação direta no WhatsApp.<br/>
-          <strong>Da nossa cápsula para a sua rotina.</strong>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- ✅ Banner full-bleed imediatamente abaixo da .row -->
-  <div class="banner-full">
-    <!-- Se tiver uma versão otimizada para mobile, use <picture>:
-    <picture>
-      <source media="(max-width: 640px)" srcset="banner-mobile.jpg">
-      <img src="banner-desktop.jpg" alt="Banner CARVA">
-    </picture>
-    -->
-    <img src="https://i.imgur.com/2Pg950G.png" alt="Banner CARVA">
+  <div class="logo3d-wrap" id="logo3d">
+    <div class="msg" id="msg" style="display:none"></div>
+    <button class="perm" id="permBtn">ativar movimento por inclinação</button>
+    <div class="hint">arraste para girar • incline no celular (se permitido)</div>
   </div>
 
-  <main class="container">
-    <section id="produtos">
-      <div class="grid">
-        <!-- PRODUTO 1 -->
-        <article class="card">
-          <div class="thumb">
-            <img src="https://i.imgur.com/GpIp2cv.png" alt="Moletom CARVA edição limitada"/>
-          </div>
-          <div class="card-body">
-            <div class="title">Moletom CARVA Essential Tee — Preto</div>
-            <div class="muted">FRETE GRATIS</div>
-            <div class="price">R$ 239,90</div>
-            <div class="sizes">
-              <button class="size-btn">P</button>
-              <button class="size-btn">M</button>
-              <button class="size-btn">G</button>
-              <button class="size-btn">GG</button>
-            </div>
-            <div class="buy">
-              <a href="#">Comprar</a>
-            </div>
-          </div>
-        </article>
+  <script type="module">
+    /* ===================== CONFIG (.GLTF) =====================
+       Use um .gltf com arquivos externos (.bin, /textures, etc.).
+       Coloque resourcePath apontando para a pasta onde estão esses assets.
+       Exemplos de estrutura:
+       ./models/logo3d.gltf
+       ./models/logo3d.bin
+       ./models/textures/diffuse.png
 
-        <!-- PRODUTO 2 -->
-        <article class="card">
-          <div class="thumb">
-            <img src="https://i.imgur.com/8MTNkOR.png" alt="Camiseta CARVA básica"/>
-          </div>
-          <div class="card-body">
-            <div class="title">Moletom CARVA Essential Tee — Branco</div>
-            <div class="muted">FRETE GRATIS</div>
-            <div class="price">R$ 119,90</div>
-            <div class="sizes">
-              <button class="size-btn">P</button>
-              <button class="size-btn">M</button>
-              <button class="size-btn">G</button>
-              <button class="size-btn">GG</button>
-            </div>
-            <div class="buy">
-              <a href="#">Comprar</a>
-            </div>
-          </div>
-        </article>
+       Se o modelo estiver comprimido em DRACO, o loader abaixo já suporta.
+    ============================================================ */
+    const CONFIG = {
+      // Caminho do arquivo .gltf (pode incluir subpasta)
+      modelUrl: './logo3d.gltf',
+      // Pasta onde estão .bin e /textures (terminar com '/')
+      resourcePath: './',
+      // Se preferir separar basePath + filename: defina basePath e passe só o nome do arquivo em modelUrl
+      basePath: null, // ex.: './models/'
+      crossOrigin: 'anonymous',
+      initialScale: 1.2,
+      rotateOnIdle: true,
+    };
 
-        <!-- PRODUTO 3 -->
-        <article class="card">
-          <div class="thumb">
-            <img src="https://i.imgur.com/yX5yEfn.png" alt="Boné CARVA"/>
-          </div>
-          <div class="card-body">
-            <div class="title">Polo CARVA Essential Tee — Nude</div>
-            <div class="muted">FRETE GRATIS</div>
-            <div class="price">R$ 89,90</div>
-            <div class="sizes">
-              <button class="size-btn">P</button>
-              <button class="size-btn">M</button>
-              <button class="size-btn">G</button>
-              <button class="size-btn">GG</button>
-            </div>
-            <div class="buy">
-              <a href="#">Comprar</a>
-            </div>
-          </div>
-        </article>
-      </div>
-    </section>
+    import * as THREE from 'three';
+    import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
+    import { DRACOLoader } from 'three/addons/loaders/DRACOLoader.js';
 
-    <section style="margin-top:34px">
-      <h2 style="font-size:22px; margin:0 0 8px">Dúvidas? Fala com a gente</h2>
-      <p class="muted">Atendimento rápido no WhatsApp. Envie seu comprovante e número do pedido para agilizar.</p>
-      <p><a class="cta" href="https://wa.me/5599999999999?text=Oi%20CARVA!%20Acabei%20de%20comprar%20e%20quero%20confirmar%20meu%20pedido." target="_blank" rel="noopener">Abrir WhatsApp</a></p>
-    </section>
+    const wrap = document.getElementById('logo3d');
+    const msg  = document.getElementById('msg');
+    function showMsg(text){ msg.innerHTML = text; msg.style.display = 'block'; }
 
-    <div class="footer">
-      <div>© <span id="year"></span> CARVA. Todos os direitos reservados.</div>
-      <div class="policy"><a href="#" onclick="alert('Compra gerida por link seguro do provedor de pagamentos (Pix e cartão). Dados pessoais usados apenas para entrega e suporte.'); return false;">Políticas</a></div>
-    </div>
-  </main>
+    // Aviso se estiver rodando em file:// (recomendado usar servidor local)
+    if (location.protocol === 'file:') {
+      showMsg('Dica: rode com um servidor local (ex.: VS Code Live Server) para evitar bloqueios ao carregar .gltf e texturas.');
+    }
+
+    const scene = new THREE.Scene();
+    scene.background = null;
+
+    const camera = new THREE.PerspectiveCamera(45, 1, 0.1, 100);
+    camera.position.set(0, 0.2, 3.2);
+
+    const renderer = new THREE.WebGLRenderer({ antialias:true, alpha:true });
+    renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
+    wrap.appendChild(renderer.domElement);
+
+    const key = new THREE.DirectionalLight(0xffffff, 2.2); key.position.set(2, 3, 4);
+    const fill = new THREE.DirectionalLight(0x99ffe1, 1.2); fill.position.set(-3, 2, 1);
+    const rim = new THREE.DirectionalLight(0x66aaff, 1.1); rim.position.set(0, -2, -3);
+    const amb = new THREE.AmbientLight(0xffffff, 0.35);
+    scene.add(key, fill, rim, amb);
+
+    const group = new THREE.Group();
+    scene.add(group);
+
+    // ===== Loader GLTF com DRACO + resourcePath/basePath =====
+    const loader = new GLTFLoader();
+    const draco = new DRACOLoader();
+    draco.setDecoderPath('https://unpkg.com/three@0.160.0/examples/jsm/libs/draco/');
+    loader.setDRACOLoader(draco);
+
+    if (CONFIG.basePath) loader.setPath(CONFIG.basePath);
+    if (CONFIG.resourcePath) loader.setResourcePath(CONFIG.resourcePath);
+    if (CONFIG.crossOrigin) loader.crossOrigin = CONFIG.crossOrigin;
+
+    function loadModel(){
+      loader.load(
+        CONFIG.modelUrl,
+        (gltf)=>{
+          const model = gltf.scene;
+          const box = new THREE.Box3().setFromObject(model);
+          const size = box.getSize(new THREE.Vector3()).length();
+          const scale = (CONFIG.initialScale * 1.6) / (size || 1);
+          model.scale.setScalar(scale);
+          model.traverse((o)=>{ if(o.isMesh){ o.castShadow = o.receiveShadow = true; if(o.material) o.material.envMapIntensity = 1.0; }});
+          model.rotation.set(0, Math.PI*0.1, 0);
+          group.add(model);
+          showMsg(''); // esconde mensagens
+        },
+        (xhr)=>{
+          // Progresso opcional: xhr.loaded / xhr.total (pode ser 0 quando não informado)
+        },
+        (err)=>{
+          console.error('Erro ao carregar GLTF:', err);
+          showMsg('Não consegui carregar seu <b>.gltf</b>. Verifique:<br>• <b>resourcePath</b> aponta para a pasta com <b>.bin</b> e <b>textures/</b><br>• Rode via servidor local (http://).<br>Carregando um cubo de teste...');
+          const geo = new THREE.BoxGeometry(1,1,1);
+          const mat = new THREE.MeshStandardMaterial({ color: 0x18e091, metalness:.4, roughness:.35 });
+          const cube = new THREE.Mesh(geo, mat);
+          group.add(cube);
+        }
+      );
+    }
+    loadModel();
+
+    // ===== Responsivo =====
+    function resize(){
+      const w = wrap.clientWidth, h = wrap.clientHeight;
+      renderer.setSize(w, h, false);
+      camera.aspect = w / h; camera.updateProjectionMatrix();
+    }
+    resize();
+    addEventListener('resize', resize);
+
+    // ==== Interação arrastar/inércia ====
+    let isDown = false, lastX = 0, lastY = 0, vx = 0, vy = 0;
+    const onDown = (x,y)=>{ isDown = true; lastX = x; lastY = y; };
+    const onMove = (x,y)=>{
+      if(!isDown) return; const dx = x - lastX, dy = y - lastY; lastX = x; lastY = y;
+      const k = 0.005; vy = -dx * k; vx = -dy * k; group.rotation.y += vy; group.rotation.x += vx; group.rotation.x = Math.max(-Math.PI/2, Math.min(Math.PI/2, group.rotation.x));
+    };
+    const onUp = ()=>{ isDown = false; };
+    renderer.domElement.addEventListener('mousedown', e=> onDown(e.clientX, e.clientY));
+    addEventListener('mousemove', e=> onMove(e.clientX, e.clientY));
+    addEventListener('mouseup', onUp);
+
+    renderer.domElement.addEventListener('touchstart', e=>{ const t=e.touches[0]; if(t) onDown(t.clientX, t.clientY); }, {passive:true});
+    renderer.domElement.addEventListener('touchmove',  e=>{ const t=e.touches[0]; if(t) onMove(t.clientX, t.clientY); }, {passive:true});
+    renderer.domElement.addEventListener('touchend', onUp);
+
+    // ==== Giroscópio (mobile) ====
+    const isTouch = matchMedia('(pointer:coarse)').matches;
+    const permBtn = document.getElementById('permBtn');
+    function enableGyro(){
+      function clamp(n,min,max){ return Math.max(min, Math.min(n,max)); }
+      const handler = (evt)=>{ const g = clamp((evt.gamma||0)/30, -1, 1); const b = clamp((evt.beta||0)/30, -1, 1); group.rotation.y = g * 0.8; group.rotation.x = -b * 0.6; };
+      if(typeof DeviceOrientationEvent!=='undefined'){
+        if(typeof DeviceOrientationEvent.requestPermission==='function'){
+          DeviceOrientationEvent.requestPermission().then(state=>{ if(state==='granted'){ addEventListener('deviceorientation', handler); permBtn.style.display='none'; } }).catch(()=>{});
+        } else { addEventListener('deviceorientation', handler); permBtn.style.display='none'; }
+      }
+    }
+    if(isTouch){ permBtn.style.display='inline-flex'; permBtn.addEventListener('click', enableGyro); }
+
+    // ==== Animação (idle + inércia) ====
+    const clock = new THREE.Clock();
+    function tick(){
+      const dt = Math.min(clock.getDelta(), 0.032);
+      if(!isDown){ group.rotation.y += vy; group.rotation.x += vx; vy *= 0.94; vx *= 0.94; if(CONFIG.rotateOnIdle && Math.abs(vx)+Math.abs(vy) < 0.0006){ group.rotation.y += 0.003; } }
+      renderer.render(scene, camera); requestAnimationFrame(tick);
+    }
+    tick();
+  </script>
 </body>
 </html>
