--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html><html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,33 +6,26 @@
   <style>
     :root{ --bg:#0b0b0b; --fg:#eaeaea; }
     html,body{height:100%}
-    body{ margin:0; background:var(--bg); color:var(--fg); font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
+    body{ margin:0; background:var(--bg); color:var(--fg); font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }.logo3d-wrap{ position:relative; width:100%; height:60vh; min-height:360px; max-height:78vh; display:grid; place-items:center; overflow:hidden; }
+canvas{ display:block; width:100%; height:100%; }
 
-    .logo3d-wrap{ position:relative; width:100%; height:60vh; min-height:360px; max-height:78vh; display:grid; place-items:center; overflow:hidden; }
-    canvas{ display:block; width:100%; height:100%; }
+.hint{ position:absolute; bottom:10px; left:50%; transform:translateX(-50%); font-size:12px; opacity:.75;}
+.perm{ position:absolute; bottom:46px; left:50%; transform:translateX(-50%); padding:.6em 1em; border-radius:12px; background:#1a1a1a; color:#fff; border:1px solid #2a2a2a; font-weight:600; cursor:pointer; display:none; }
+.msg{ position:absolute; top:10px; left:50%; transform:translateX(-50%); font-size:12px; background:#141414; border:1px solid #2a2a2a; padding:.5em .8em; border-radius:10px; opacity:.9; max-width:92%; text-align:center }
+@media (max-width:640px){ .logo3d-wrap{ height:56vh; min-height:300px } }
 
-    .hint{ position:absolute; bottom:10px; left:50%; transform:translateX(-50%); font-size:12px; opacity:.75;}
-    .perm{ position:absolute; bottom:46px; left:50%; transform:translateX(-50%); padding:.6em 1em; border-radius:12px; background:#1a1a1a; color:#fff; border:1px solid #2a2a2a; font-weight:600; cursor:pointer; display:none; }
-    .msg{ position:absolute; top:10px; left:50%; transform:translateX(-50%); font-size:12px; background:#141414; border:1px solid #2a2a2a; padding:.5em .8em; border-radius:10px; opacity:.9; max-width:92%; text-align:center }
-    @media (max-width:640px){ .logo3d-wrap{ height:56vh; min-height:300px } }
-  </style>
-
-  <!-- Import Map: resolve "three" e addons no navegador -->
-  <script type="importmap">
+  </style>  <!-- Import Map: resolve "three" e addons no navegador -->  <script type="importmap">
     {"imports":{
       "three":"https://unpkg.com/three@0.160.0/build/three.module.js",
       "three/addons/":"https://unpkg.com/three@0.160.0/examples/jsm/"
     }}
-  </script>
-</head>
+  </script></head>
 <body>
   <div class="logo3d-wrap" id="logo3d">
     <div class="msg" id="msg" style="display:none"></div>
     <button class="perm" id="permBtn">ativar movimento por inclinação</button>
     <div class="hint">arraste para girar • incline no celular (se permitido)</div>
-  </div>
-
-  <script type="module">
+  </div>  <script type="module">
     /* ===================== CONFIG (.GLTF) =====================
        Use um .gltf com arquivos externos (.bin, /textures, etc.).
        Coloque resourcePath apontando para a pasta onde estão esses assets.
@@ -174,6 +166,5 @@
       renderer.render(scene, camera); requestAnimationFrame(tick);
     }
     tick();
-  </script>
-</body>
-</html>
+  </script></body>
+</html> 
