--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     import { GLTFLoader } from 'https://unpkg.com/three@0.160.0/examples/jsm/loaders/GLTFLoader.js';
 
     const CONFIG = {
-      modelUrl: './logo3d.gltf',
+      modelUrl: './logo3dpreta.gltf',
       initialScale: 0.9,
       rotateOnIdle: true,
       ctaUrl: 'https://wa.me/55SEUNUMERO?text=Quero%20entrar%20na%20lista%20VIP%20da%20CARVA'
